# kafka_crypto_pricing

./: .env.sample  Makefile  cli.py  pyproject.toml  readme.md  test_consumer.py  test_producer.py
model/: config.py  kafka.py
